<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Praisification</string>
    <string name="title_person_detail">Protocol</string>
    <string name="sDeatilHeader">Visiting</string>
    <string name="sHostName">Host</string>
    <string name="sListHeader">Hosts:</string>
    <string name="sArrival">Arrival</string>
    <string name="sLeaving">Leaving</string>
    <string name="sDrinks">Drinks:</string>
    <string name="sFood">Food:</string>
    <string name="sExtras">Extras:</string>
    <string name="sBonus">Bonus:</string>
    <string name="sThumbnail">Thumbnail</string>
    <string name="sPictureDescription">Group picture</string>
    <string name="sActionNewHost">Add new host</string>
    <string name="sActionDeleteHost">Delete current host</string>
    <string name="sNewHostDialogHint">Enter new element</string>
    <string name="sOK">OK</string>
    <string name="sCancel">Cancel</string>
    <string name="sDrinkSpinnerItem">Drink</string>
    <string name="sFoodSpinnerItem">Food</string>
    <string name="sExtrasSpinnerItem">Extras</string>
    <string name="sDialogDeleteHeader">Select the items you want to remove</string>
    <string name="sError">Something went wrong taking a picture</string>
    <string name="sShow">Show</string>
    <string name="sRetake">Retake</string>
    <string name="sImageButtonSecondHit">Show picture or take a new one?</string>
    <string name="title_activity_show_picture">Group Picture</string>
    <string name="sDeletedPicture">Image not found</string>
	<string name="sTreeRating">Tree:</string>
	<string name="sAddContent">Add</string>
    <string name="sRemoveContent">Remove</string>
    <string name="sErrorToast">Couldn not create new host: Hostname must not be empty!</string>
    <string name="sActionExportAll">Export all Protocolls to PDF</string>
    <string name="sActionExportToast">Exported to:</string>
    <string name="sPDFTitle">X-Mas Tree Praisification Protocolls</string>
    <string name="sNameColumn">Name</string>
	<string name="sDrinksColumn">Drinks</string>
	<string name="sFoodColumn">Food</string>
    <string name="sExtrasColumn">Extras</string>
    <string name="sBonusColumn">Bonus</string>
    <string name="sTreeColumn">Tree Rating</string>
    <string name="sArrivalColumn">Arrival</string>
    <string name="sDepatureColumn">Departure</string>
    <string name="sNothingToExport">No protocolls to export</string>
</resources>
